# simple-ai-slack-bot

./: .env.sample  Dockerfile  README.md  app.py  configuration.py  constant.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  simple_qa.py
models/: message.py
tests/utils/: test_token_counter.py
utils/: token_counter.py
