[tool.poetry]
name = "simple-ai-slack-bot"
version = "0.1.0"
description = "Simple Slack bot powered by OpenAI Chat API"
authors = ["hnishi <nishigami2509@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_ai_slack_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
certifi = "2023.7.22"
charset-normalizer = "3.1.0"
click = "8.1.3"
exceptiongroup = "1.1.3"
frozenlist = "1.3.3"
idna = "3.4"
iniconfig = "2.0.0"
install = "1.3.5"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
openai = "0.27.2"
packaging = "23.0"
pathspec = "0.11.1"
platformdirs = "3.2.0"
pluggy = "1.3.0"
regex = "2023.3.23"
requests = "2.31.0"
slack-bolt = "1.17.0"
slack-sdk = "3.20.2"
sqlalchemy = "2.0.8"
tiktoken = "0.3.3"
tomli = "2.0.1"
tqdm = "4.65.0"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
yarl = "1.8.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests",]
